fix misaligned avatar uploader icons

--- a/app/assets/stylesheets/users/user_plate.scss
+++ b/app/assets/stylesheets/users/user_plate.scss
@@ -125,23 +125,21 @@
         display: flex;
         color: transparent;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-end;
         flex-direction: column;
         flex-wrap: wrap;
-        width: 200px;
-        height: 200px;
+        width: 210px;
+        height: 210px;
         z-index: 2;
-        background-color: $white-half-transparent;
-        color: rgba(60, 60, 60, 0.8);
-        border: 2px solid transparent;
+        background-color: transparent;
+        color: rgba(250, 250, 250, 0.5);
+        border: none;
         opacity: 0;
-        transition: opacity 0.3s;
-        -webkit-transition: opacity 0.3s;
         outline: none;
         border-radius: 100%;
         h3 {
           font-family: 'open-sans-bold';
-          margin: 0;
+          margin: 10px;
         }
         &:hover {
           opacity: 1;
@@ -150,6 +148,11 @@
           font-size: 90px;
           text-align: center;
           color: inherit;
+          width: 100%;
+          margin: 20px;
+        }
+        .fa-arrow-up {
+          margin-top: 50px;
           width: 100%;
         }
         #upload-wrap {
